Fix the height of the hero section on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -46,7 +46,7 @@
 
 @media (max-width: 720px) {
   .hero-section {
-    min-height: 120vh;
+    min-height: 100vh;
   }
 
   .hero-info-container {
